pages edit Blogg Add Courses page redesign

--- a/Revolution-in-digital-Space.html
+++ b/Revolution-in-digital-Space.html
@@ -538,48 +538,39 @@
 								</ul>
 							</div><!-- post share end -->
 
-							<!-- autor-bio start -->
-							<div class="container small padding-top-90">
-								<div class="flex-container padding-left-right-20 content-bg-dark-1">
-									<!-- <div class="three-columns padding-top-bottom-20">
-										<div class="column-r-margin-20">
-											<img src="assets/images/avatars/author/side-view-photography-of-a-woman-wearing-fedora-1070058.jpg" alt="Author">
-										</div>
-									</div> -->
-									<!-- <div class="nine-columns padding-top-bottom-20">
-										<h5 class="headline-xxxs text-color-white">Abdul Wasith</h5>
-										<p class="body-text-xs text-color-white margin-top-20">Truffaut forage pour-over la croix. Enamel pin wolf franzen lumbersexual sartorial marfa blue bottle man braid art party offal air plant umami health goth seitan. Health goth mustache pork belly celiac.</p>
-										<ul class="list list_row list_right padding-top-20">
-											<li class="list__item">
-												<a href="#" class="icon-overlay-btn white js-pointer-large">
-													<i class="icon-overlay-btn__inner fab fa-instagram"></i>
-												</a>
-											</li>
-											<li class="list__item">
-												<a href="#" class="icon-overlay-btn white js-pointer-large">
-													<i class="icon-overlay-btn__inner fab fa-twitter"></i>
-												</a>
-											</li>
-											<li class="list__item">
-												<a href="#" class="icon-overlay-btn white js-pointer-large">
-													<i class="icon-overlay-btn__inner fab fa-facebook-f"></i>
-												</a>
-											</li>
-											<li class="list__item">
-												<a href="#" class="icon-overlay-btn white js-pointer-large">
-													<i class="icon-overlay-btn__inner fab fa-wha"></i>
-												</a>
-											</li>
-										</ul>
-									</div> -->
-								</div>
-							</div><!-- autor-bio end -->
-
 						</div><!-- lines-container end -->
 
 					</div><!-- container end -->
 				</div><!-- pos-rel end -->
 			</section><!-- fresh topics end -->
+
+			<!-- next post start -->
+			<section class="pos-rel bg-img-cover" style="background-image:url(assets/images/posts/dont-panic/adult-beautiful-blur-casual-374703.jpg)">
+				<!-- bg-overlay -->
+				<div class="bg-overlay-black"></div>
+				<!-- pos-rel start -->
+				<div class="pos-rel flex-min-height-100vh">
+					<div class="padding-top-bottom-120 container small text-center">
+						<div class="js-scrollanim">
+							<!-- button start -->
+							<a href="top-choices-in-web-hosting.html" class="skew-btn js-pointer-large js-animsition-link anim-fade">
+								<span class="skew-btn__box">
+									<span class="skew-btn__content">Next Article</span>
+									<span class="skew-btn__arrow"></span>
+								</span>
+							</a><!-- button end -->
+
+							<!-- title start -->
+							<div class="padding-top-30 text-center">
+								<a href="top-choices-in-web-hosting.html" class="js-pointer-large js-animsition-link">
+									<h2 class="headline-xl anim-fade tr-delay-02">Top Choices In Web Hosting</h2>
+								</a>
+							</div><!-- title end -->
+						</div>
+					</div>
+				</div><!-- pos-rel end -->
+			</section><!-- next post end -->
+
 		</main><!-- main end -->
 
 		<!-- footer start -->
