--- a/You-Have-a-chance-to-Refine-Your-Marketing-Approach.html
+++ b/You-Have-a-chance-to-Refine-Your-Marketing-Approach.html
@@ -361,6 +361,7 @@
 							<br><br>
 							<p class="subhead-xs text-color-b0b0b0 margin-top-20 anim-fade tr-delay-03">
 								2020 forced many small businesses to become focused in ways they didn’t imagine last winter. I’m not gonna enter the apparent details that we’ve all lived through recently. You’re alright conscious of them a day . At DAX , we’ve refined our approach during this point , and I’ll share how during this post. Hopefully you’ll be inspired to require actions that assist you refine your marketing approach and position you well regardless of the business season you’re in.
+							</p>
 							</div>
 
 					</div><!-- container end -->
@@ -380,7 +381,7 @@
 								This process led us to a redesign of our website. We’ve approved the interior mockups and are excited to start development soon! We can’t wait to ascertain how the new user flow and appearance resonates with new and existing clients.
 								.</p>
 							<!-- <p class="body-text-s text-color-white margin-top-20">Viral pug actually shoreditch four dollar toast crucifix hammock authentic vice narwhal gluten-free cray everyday carry marfa. Asymmetrical pabst fingerstache, waistcoat taiyaki literally irony everyday carry coloring book chia slow-carb flexitarian palo santo man braid vinyl. 90's pug vape lomo affogato four dollar toast plaid.</p> -->
-						</div>
+							</div>
 
 
 												<!-- flex-container start -->
@@ -403,7 +404,7 @@
 														</div>
 													</div><!-- column end -->
 												</div><!-- flex-container end -->
-<br><br><br>
+												<br><br><br>
 						<div class="container small">
 							<h2 class="headline-s text-color-white text-center">TELLING YOUR COMPELLING STORY</h2>
 							<p class="body-text-s text-color-white margin-top-20">One of the top results of this introspection was a Brand Guide – or Brand Bible, if you'll . It’s a document we put together that uniquely describes our brand and the way we engage as a brand. We’ve been building these for years for our clients, but this is often the primary time we’ve ironed out these details for ourselves to the present quite degree.<br><br>
@@ -465,6 +466,33 @@
 				</div><!-- pos-rel end -->
 			</div><!-- post end -->
 			<!-- entry-content end -->
+
+			<!-- next post start -->
+			<section class="pos-rel bg-img-cover" style="background-image:url(assets/images/posts/dont-panic/adult-beautiful-blur-casual-374703.jpg)">
+				<!-- bg-overlay -->
+				<div class="bg-overlay-black"></div>
+				<!-- pos-rel start -->
+				<div class="pos-rel flex-min-height-100vh">
+					<div class="padding-top-bottom-120 container small text-center">
+						<div class="js-scrollanim">
+							<!-- button start -->
+							<a href="Revolution-in-digital-Space.html" class="skew-btn js-pointer-large js-animsition-link anim-fade">
+								<span class="skew-btn__box">
+									<span class="skew-btn__content">Next Article</span>
+									<span class="skew-btn__arrow"></span>
+								</span>
+							</a><!-- button end -->
+
+							<!-- title start -->
+							<div class="padding-top-30 text-center">
+								<a href="Revolution-in-digital-Space.html" class="js-pointer-large js-animsition-link">
+									<h2 class="headline-xl anim-fade tr-delay-02">Revolution in digital Space</h2>
+								</a>
+							</div><!-- title end -->
+						</div>
+					</div>
+				</div><!-- pos-rel end -->
+			</section><!-- next post end -->
 
 		</main><!-- main end -->
 
