--- a/about-us.html
+++ b/about-us.html
@@ -20,7 +20,7 @@
 	<link rel="apple-touch-icon" sizes="72x72" href="assets/images/apple-touch-icon-72x72-white.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="assets/images/apple-touch-icon-114x114-white.png">
 
-		<title>DAX - Best Digital Marketing Agency </title>
+		<title>DAX | About - Best Digital Marketing Agency </title>
 
 		<!-- fonts -->
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap" rel="stylesheet">
@@ -314,9 +314,9 @@
 						<h3 class="headline-xs hidden-box">
 							<span class="anim-slide"><span class="text-color-red">WE ARE DIGITAL CREATIVE AGENCY</span></span>
 						</h3>
-						<h2 class="headline-xxxs margin-top-20 anim-text-reveal tr-delay-03">
-					DAX Ads is one of those unique digital marketing providers in Kannur which blends creativity with feasibility. We offer a plethora of services like Branding, SEM, SMM, Complete Digital Marketing, Website Design and Development, Domain Registration, Web Hosting, E - Commerce Solutions, Content Management System and other IT related projects. <br><br>We don't believe getting lost within the crowd. So, we differentiate ourselves by delivering what we promise. Although we provide digital marketing solutions at unbelievably attractive packages, quality are some things we never compromise on. So, if you're willing to occupy the digital space before others, our doors are wide open!
-						</h2>
+						<p class="subhead-s text-color-b0b0b0 margin-top-20 anim-fade tr-delay-03">
+							DAX Ads is one of those unique digital marketing providers in Kannur which blends creativity with feasibility. We offer a plethora of services like Branding, SEM, SMM, Complete Digital Marketing, Website Design and Development, Domain Registration, Web Hosting, E - Commerce Solutions, Content Management System and other IT related projects. <br><br>We don't believe getting lost within the crowd. So, we differentiate ourselves by delivering what we promise. Although we provide digital marketing solutions at unbelievably attractive packages, quality are some things we never compromise on. So, if you're willing to occupy the digital space before others, our doors are wide open!
+						</p>
 					</div>
 				</div><!-- lines-container end -->
 			</section><!-- page head end -->
@@ -374,18 +374,18 @@
 			</section><!-- pos-rel end -->
 
 			<!-- about start -->
-			<section class=" pos-rel section-bg-dark-2">
+			<section class=" pos-rel section-bg-dark-1">
 				<!-- lines-container start -->
-				<div class="lines-container pos-rel no-lines flex-min-height-100vh">
+				<div class="lines-container pos-rel no-lines flex-min-height-10vh">
 					<!-- flex-container start -->
 					<div class="container flex-container reverse padding-top-30 padding-bottom-120">
 
 
 						<!-- column start -->
-						<div class="five-columns column-100-100">
+						<div class="twelve-columns column-100-100">
 							<div class="column-r-margin-40-999">
 								<!-- skills start -->
-								<div class="padding-top-90">
+								<div class="padding-top-90 ">
 								<div class="js-scrollanim">
 									<h2 class="headline-s hidden-box">
 										<span class="anim-slide">Our Skills</span>
@@ -394,7 +394,7 @@
 									<ul class="list list_margin-20px margin-top-30">
 										<!-- progress-box start -->
 										<li class="list__item progress-bar">
-											<div class="headline-xxxxs anim-text-fill" data-text="Front-end Development">Front-end Development</div>
+											<div class="headline-xxxxs anim-text-fill" data-text="Full Stack">Full Stack</div>
 											<div class="progress-bar__counter headline-xxxxs anim-text-fill tr-delay-02" data-text="100%">100%</div>
 											<div class="progress-bar__lines-box js-progress-animate-box" data-progress="100%">
 												<div class="progress-bar__line js-progress-animate"></div>
@@ -404,7 +404,7 @@
 
 										<!-- progress-box start -->
 										<li class="list__item progress-bar">
-											<div class="headline-xxxxs anim-text-fill tr-delay-02" data-text="Back-end Development">Back-end Development</div>
+											<div class="headline-xxxxs anim-text-fill tr-delay-02" data-text="SEO">SEO</div>
 											<div class="progress-bar__counter headline-xxxxs anim-text-fill tr-delay-04" data-text="90%">90%</div>
 											<div class="progress-bar__lines-box js-progress-animate-box" data-progress="90%">
 												<div class="progress-bar__line js-progress-animate tr-delay-02"></div>
@@ -434,9 +434,9 @@
 
 										<!-- progress-box start -->
 										<li class="list__item progress-bar">
-											<div class="headline-xxxxs anim-text-fill tr-delay-04" data-text="Motion Design">Motion Design</div>
-											<div class="progress-bar__counter headline-xxxxs anim-text-fill tr-delay-06" data-text="86%">86%</div>
-											<div class="progress-bar__lines-box js-progress-animate-box" data-progress="86%">
+											<div class="headline-xxxxs anim-text-fill tr-delay-04" data-text="SMM">SMM</div>
+											<div class="progress-bar__counter headline-xxxxs anim-text-fill tr-delay-06" data-text="96%">96%</div>
+											<div class="progress-bar__lines-box js-progress-animate-box" data-progress="96%">
 												<div class="progress-bar__line js-progress-animate tr-delay-04"></div>
 												<div class="progress-bar__line red js-progress-animate tr-delay-05"></div>
 											</div>
@@ -459,95 +459,37 @@
 
 						</div><!-- column end -->
 
-						<!-- column start -->
-						<div class="six-columns column-100-100">
-
-							<!-- what we do start -->
-							<div class="padding-top-90">
-								<h2 class="headline-s hidden-box">
-									<span class="anim-slide js-scrollanim">What We Do</span>
-								</h2>
-								<!-- accordion start -->
-								<div class="accordion accordion_underline js-accordion js-accordion-first-active margin-top-60">
-									<!-- accordion__tab start -->
-									<div class="accordion__tab js-accordion-tab">
-										<div class="accordion__btn js-accordion-btn js-pointer-large">
-											<h6 class="accordion__btn-title headline-xxs margin-top-bottom-20">Diigital Marketing</h6>
-										</div>
-										<div class="accordion__content js-accordion-content">
-											<p class="body-text-s">
-												The traditional 4P’s of selling - product, price, promotion and place are getting fashionably old fashioned . In a world where consumers are more aware, spoiled for choice, connected and disloyal, we'd like to lean into the new 5Ps of marketing: Precision, Purpose, Partnerships, Pace and Personalization. We concentrate on creating digital marketing campaigns that connect brands with their core audience and leverage the proper message to drive value. We specialise in forming, implementing and evaluating cross-functional decisions that enable you to realize your goals
-											</p>
-										</div>
-									</div><!-- accordion__tab end -->
-
-									<!-- accordion__tab start -->
-									<div class="accordion__tab js-accordion-tab">
-										<div class="accordion__btn js-accordion-btn js-pointer-large">
-											<h6 class="accordion__btn-title headline-xxs margin-top-bottom-20">Graphic Designing</h6>
-										</div>
-										<div class="accordion__content js-accordion-content">
-											<p class="body-text-s">
-												We can attracte customers towards your business with a strong brand look & plan of action. utilize our graphic design skills and let's brand or rebrand your business now.
-											</p>
-										</div>
-									</div><!-- accordion__tab end -->
-
-									<!-- accordion__tab start -->
-									<div class="accordion__tab js-accordion-tab">
-										<div class="accordion__btn js-accordion-btn js-pointer-large">
-											<h6 class="accordion__btn-title headline-xxs margin-top-bottom-20">Web Design & Development</h6>
-										</div>
-										<div class="accordion__content js-accordion-content">
-											<p class="body-text-s">
-												Our profiled expertise with improved softwares, design, develop, maintain and promote websites with starring user satisfaction.
-											</p>
-										</div>
-									</div><!-- accordion__tab end -->
-
-									<!-- accordion__tab start -->
-									<div class="accordion__tab js-accordion-tab">
-										<div class="accordion__btn js-accordion-btn js-pointer-large">
-											<h6 class="accordion__btn-title headline-xxs margin-top-bottom-20">App Development & Marketing</h6>
-										</div>
-										<div class="accordion__content js-accordion-content">
-											<p class="body-text-s">
-												At DAX, our programmers will help you build and optimize an "App" with an eye-catching user interface that is efficient and easy-to-use. This will provide ease of access to the services you have to offer and improve customer interactions with your business.
-											</p>
-										</div>
-									</div><!-- accordion__tab end -->
-
-									<!-- accordion__tab start -->
-									<div class="accordion__tab js-accordion-tab">
-										<div class="accordion__btn js-accordion-btn js-pointer-large">
-											<h6 class="accordion__btn-title headline-xxs margin-top-bottom-20">Ad Production</h6>
-										</div>
-										<div class="accordion__content js-accordion-content">
-											<p class="body-text-s">
-												Video marketing is a powerful means for promoting anything you want online, whether it’s a product, service, opt-in form, website, blog, etc. Videos are now an expected component of any website.
-											</p>
-										</div>
-									</div><!-- accordion__tab end -->
-									<!-- accordion__tab start -->
-									<div class="accordion__tab js-accordion-tab">
-										<div class="accordion__btn js-accordion-btn js-pointer-large">
-											<h6 class="accordion__btn-title headline-xxs margin-top-bottom-20">Software Solution</h6>
-										</div>
-										<div class="accordion__content js-accordion-content">
-											<p class="body-text-s">
-												We are delivering complex web solutions and online platform for our valuable clients. Our dedicated and experienced team works directly with our clients to build a universal product and help them develop their customer growth.
-											</p>
-										</div>
-									</div><!-- accordion__tab end -->
-
-								</div><!-- accordion end -->
-							</div><!-- what we do end -->
-						</div><!-- column end -->
-
 					</div><!-- flex-container end -->
 				</div><!-- lines-container end -->
 			</section><!-- about end -->
-			<!-- new album start -->
+
+
+			<div id="down" class="pos-rel section-bg-dark-1">
+				<!-- pos-rel start -->
+				<div class="pos-rel padding-top-bottom-120">
+					<!-- entry-content start -->
+					<article>
+
+						<div class="container small">
+							<h2 class="headline-s text-color-white text-center">Our Story</h2>
+							<p class="body-text-s text-color-white margin-top-20">One of the top results of this introspection was a Brand Guide – or Brand Bible, if you'll . It’s a document we put together that uniquely describes our brand and the way we engage as a brand. We’ve been building these for years for our clients, but this is often the primary time we’ve ironed out these details for ourselves to the present quite degree.<br><br>
+								Our Brand Guide will inform our Marketing Strategy and therefore the many tactical sorts of content we’ll produce in coming months and years.<br><br>
+
+								We’ve also taken major steps to use more video in our marketing in 2020. it had been already a robust trend heading into the year but became even more paramount within the virtual landscape of Covid-19.<br><br>
+								Both our use of video internally and with our partner and project clients has exploded in 2020. We’ve found very creative ways to capture video, and thus stories, during the lockdowns and limited capacity here.<br><br>
+								If you've got an excellent story to inform , then follow a process that permits you to inform it during a genuine way – consistently – that helps your clients solve their problems. If you don’t know your unique story, then I encourage you to spend a while immediately to craft it. This isn’t the time for “me too” businesses to thrive.<br><br>
+						</p>
+							<!-- <p class="body-text-s text-color-white margin-top-20">Viral pug actually shoreditch four dollar toast crucifix hammock authentic vice narwhal gluten-free cray everyday carry marfa. Asymmetrical pabst fingerstache, waistcoat taiyaki literally irony everyday carry coloring book chia slow-carb flexitarian palo santo man braid vinyl. 90's pug vape lomo affogato four dollar toast plaid.</p> -->
+						</div>
+
+						<div class="padding-top-30">
+							<img src="assets/images/posts/red-cars/red-coupe-drifting-on-asphalt-road-3608542.jpg" alt="Post">
+						</div>
+					</article><!-- entry-content end -->
+
+				</div><!-- pos-rel end -->
+			</div><!-- post end -->
+
 
 		</main><!-- main end -->
 
