--- a/academy.html
+++ b/academy.html
@@ -20,7 +20,7 @@
 	<link rel="apple-touch-icon" sizes="72x72" href="assets/images/apple-touch-icon-72x72-white.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="assets/images/apple-touch-icon-114x114-white.png">
 
-		<title>DAX - Best Digital Marketing Agency </title>
+		<title>DAX | Academy - Best Digital Marketing Agency </title>
 
 		<!-- fonts -->
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap" rel="stylesheet">
@@ -373,10 +373,13 @@
 							<div class="container small text-center padding-top-bottom-120">
 								<h2 class="headline-l">
 									<span class="hidden-box d-block">
-										<span class="anim-slide tr-delay-03"></span>
+										<span class="anim-slide tr-delay-03">Learn It</span>
 									</span>
 									<span class="hidden-box d-block">
-										<span class="anim-slide tr-delay-04"></span>
+										<span class="anim-slide tr-delay-04"> <span class="text-color-red">&</span></span>
+									</span>
+									<span class="hidden-box d-block">
+										<span class="anim-slide tr-delay-04">Earn It</span>
 									</span>
 								</h2>
 								<!-- <p class="subhead-xs text-color-dadada margin-top-20 anim-fade tr-delay-06">Tote bag cornhole pork belly swag vexillologist godard.</p><br>
@@ -431,7 +434,7 @@
 					<div class="flex-container flex-align-center padding-top-60">
 						<!-- column start -->
 						<div class="five-columns column-50-100 padding-top-30">
-							<a href="assets/images/projects/courses/graphic-tablet-and-open-book-with-drawing-located-on-marble-3850229.jpg" class="d-block anim-overlay js-scrollanim js-pointer-zoom js-photo-popup">
+							<a href="digital-marketing.html" class="d-block anim-overlay js-scrollanim js-pointer-zoom js-photo-popup">
 								<img src="assets/images/projects/courses/graphic-tablet-and-open-book-with-drawing-located-on-marble-3850229.jpg" alt="course">
 							</a>
 						</div><!-- column end -->
@@ -448,7 +451,7 @@
 										<p class="body-text-s text-color-black margin-top-20">
 											Digital Marketing is one of the fastest growing sectors in the world. Digital Marketing is a New-Age form of marketing. To put it simple, Digital Marketing is internet marketing, from which we can market our products or services to any part of the country with the help of online platform such as Google, Bing, Websites, Social Media, Email and Mobile Applications.</p>
 									</div>
-									<a href="course 1.html" class="skew-btn js-pointer-large">
+									<a href="digital-marketing.html" class="skew-btn js-pointer-large">
 										<span class="skew-btn__box">
 											<span class="skew-btn__content text-color-black">Learn more</span>
 											<span class="skew-btn__arrow black"></span>
@@ -474,7 +477,7 @@
 										<p class="body-text-s text-color-black margin-top-20">
 											Web development is the building and maintenance of websites; it's the work that happens behind the scenes to make a website look great...</p>
 									</div>
-									<a href="course 3.html" class="skew-btn js-pointer-large">
+									<a href="web-development.html" class="skew-btn js-pointer-large">
 										<span class="skew-btn__box">
 											<span class="skew-btn__content text-color-black">Learn more</span>
 											<span class="skew-btn__arrow black"></span>
@@ -485,7 +488,7 @@
 						</div><!-- column end -->
 						<!-- column start -->
 						<div class="five-columns column-50-100 padding-top-30">
-							<a href="assets/images/projects/courses/man-using-laptop-on-table-against-white-background-257897.jpg" class="d-block anim-overlay js-scrollanim js-pointer-zoom js-photo-popup">
+							<a href="web-development.html" class="d-block anim-overlay js-scrollanim js-pointer-zoom js-photo-popup">
 								<img src="assets/images/projects/courses/man-using-laptop-on-table-against-white-background-257897.jpg" alt="course">
 							</a>
 						</div><!-- column end -->
@@ -495,7 +498,7 @@
 					<div class="flex-container flex-align-center padding-top-60">
 						<!-- column start -->
 						<div class="five-columns column-50-100 padding-top-30">
-							<a href="assets/images/projects/courses/notebook-with-smartphone-showing-photo-gallery-app-on-screen-3850246.jpg" class="d-block anim-overlay js-scrollanim js-pointer-zoom js-photo-popup">
+							<a href="graphic-design.html" class="d-block anim-overlay js-scrollanim js-pointer-zoom js-photo-popup">
 								<img src="assets/images/projects/courses/notebook-with-smartphone-showing-photo-gallery-app-on-screen-3850246.jpg" alt="course">
 							</a>
 						</div><!-- column end -->
@@ -510,9 +513,9 @@
 											Of them before they sold out
 										</h3> -->
 										<p class="body-text-s text-color-black margin-top-20">
-											Graphic Design plays a very important role in today’s world. Graphic Design is an art used to create visual communication like Billboards, logos, magazines, web templates, vector graphics, raster graphics, etc…</p>
+										The graphic design plays an important role in today’s modern competitive global environment. The graphics designing has become an integral part of any business and occasion. For a customized website capable of providing all your need, the graphics arrangement on the website should be appropriate as well as look attractive and adorable. The graphic designing is important in almost every field that includes- marketing, magazine layout etc. A good graphic design should effectively communicate the message of the sender to the target audience using tools of visual communication.
 									</div>
-									<a href="course 2.html" class="skew-btn js-pointer-large">
+									<a href="graphic-design.html" class="skew-btn js-pointer-large">
 										<span class="skew-btn__box">
 											<span class="skew-btn__content text-color-black">Learn more</span>
 											<span class="skew-btn__arrow black"></span>
