--- a/blog_sliders.html
+++ b/blog_sliders.html
@@ -19,7 +19,7 @@
 		<link rel="apple-touch-icon" href="assets/images/apple-touch-icon-57x57-white.png">
 		<link rel="apple-touch-icon" sizes="72x72" href="assets/images/apple-touch-icon-72x72-white.png">
 		<link rel="apple-touch-icon" sizes="114x114" href="assets/images/apple-touch-icon-114x114-white.png">
-			<title>DAX - Best Digital Marketing Agency </title>
+			<title>DAX | Blog's - Best Digital Marketing Agency </title>
 
 		<!-- fonts -->
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap" rel="stylesheet">
@@ -298,6 +298,34 @@
 								</div>
 							</article><!-- swiper-slide end -->
 
+							<!-- swiper-slide start -->
+							<article class="swiper-slide">
+								<div class="anim-img-scale">
+									<a href="You-Have-a-chance-to-Refine-Your-Marketing-Approach.html" class="d-block hover-box js-animsition-link js-pointer-large">
+										<img class="anim-img-scale__inner" src="https://images.pexels.com/photos/270637/pexels-photo-270637.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Post">
+										<h3 class="headline-xxxs pos-abs pos-left-bottom hover-move-right">
+											<span class="hidden-box d-block">
+												<span class="anim-slide tr-delay-04">Top Choices In</span>
+											</span>
+											<span class="hidden-box d-block">
+												<span class="anim-slide tr-delay-05">web Hosting</span>
+											</span>
+										</h3>
+									</a>
+									<ul class="pos-abs pos-left-top list list_row list_margin-30px">
+										<li class="list__item">
+											<a href="https://www.instagram.com/_wacheee_/" target="_blank" class="subhead-xxs anim-text-fill tr-delay-04 js-pointer-small" data-text="By: Amal Prakash">By: Amal Prakash</a>
+										</li>
+										<!-- <li class="list__item">
+											<a href="#" class="subhead-xxs anim-text-fill tr-delay-05 js-pointer-small" data-text="In: Art">In: Art</a>
+										</li> -->
+										<li class="list__item">
+											<a href="#0" class="subhead-xxs anim-text-fill tr-delay-06 js-pointer-small" data-text="11 February 2021">11 February 2021</a>
+										</li>
+									</ul>
+								</div>
+							</article><!-- swiper-slide end -->
+
 						</div><!-- swiper-wrapper end -->
 
 						<!-- swiper-button-prev start -->
@@ -332,6 +360,46 @@
 								Cloud bread cardigan messenger bag raw denim swag drinking vinegar. Yuccie jianbing bespoke retro, photo booth salvia. Helvetica hella vexillologist, prism lo-fi activated charcoal iPhone thundercats irony meggings meh cardigan chartreuse.
 							</p> -->
 						</div>
+
+						<!-- blog-entry start -->
+						<article class="flex-container flex-align-center padding-top-60">
+							<div class="six-columns padding-top-30">
+								<a href="top-choices-in-web-hosting.html" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
+									<div class="anim-img-reveal__hidden">
+										<div class="anim-img-reveal__scale">
+											<img class="img-hover-scale" src="https://images.unsplash.com/photo-1514580426463-fd77dc4d0672?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MTB8fGRpZ2l0YWx8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Post">
+										</div>
+									</div>
+								</a>
+							</div>
+							<div class="six-columns padding-top-30">
+								<div class="column-l-margin-40 anim-fade js-scrollanim">
+									<ul class="list list_row list_margin-30px">
+										<li class="list__item">
+											<a href="https://www.instagram.com/i_m_ml_07/" target="_blank" class="subhead-xs text-color-8a8a8a text-hover-to-red js-pointer-small">By: Amal Prakash</a>
+										</li>
+										<!-- <li class="list__item">
+											<a href="#" class="subhead-xxs text-color-8a8a8a text-hover-to-red js-pointer-small">In: Art</a>
+										</li> -->
+										<li class="list__item">
+											<a href="#0" class="subhead-xs text-color-8a8a8a text-hover-to-red js-pointer-small">11 February 2021</a>
+										</li>
+									</ul>
+									<a href="top-choices-in-web-hosting.html" class="margin-top-bottom-30 d-block js-pointer-large js-animsition-link">
+										<h3 class="headline-xs">Top Choices In Web Hosting</h3>
+										<p class="body-text-s margin-top-20">
+											In today’s Society, if you have got something to say, do, sell or whatever it is, you are going to need a website and you are going to need a really good provider to make sure that your traffic is managed that people can see it’s visibility and...
+										</p>
+									</a>
+									<a href="top-choices-in-web-hosting.html" class="skew-btn js-pointer-large js-animsition-link">
+										<span class="skew-btn__box">
+											<span class="skew-btn__content">Continue reading</span>
+											<span class="skew-btn__arrow"></span>
+										</span>
+									</a>
+								</div>
+							</div>
+						</article><!-- blog-entry end -->
 
 						<!-- blog-entry start -->
 						<article class="flex-container reverse flex-align-center padding-top-60">
