--- a/index.html
+++ b/index.html
@@ -820,16 +820,15 @@
 											<a href="#" class="subhead-xxs text-color-888888 text-hover-to-red js-pointer-small">In: Art</a>
 										</li> -->
 										<li class="list__item">
-											<a href="Three-Essential-Digital-Marketing-Channels-In-2020.html" class="subhead-xs text-color-888888 text-hover-to-red js-pointer-small">18 September 2020</a>
+											<a href="Three-Essential-Digital-Marketing-Channels-In-2020.html" class="subhead-xs text-color-888888 text-hover-to-red js-pointer-small">10 February 2021</a>
 										</li>
 									</ul>
 									<a href="Three-Essential-Digital-Marketing-Channels-In-2020.html" class="margin-top-bottom-30 d-block js-pointer-large js-animsition-link">
-										<h3 class="headline-xs text-color-black">
-											Three Essential Digital Marketing<br>
-											Channels In 2020
-										</h3>
+										<h3 class="headline-xs text-color-black">You Have a chance to<br>
+										Refine Your Marketing Approach</h3>
 										<p class="body-text-s margin-top-20 text-color-black">
-											2020 has been a challenging year for marketing professionals and agencies would be an understatement. While some companies and industries are affected more than that, every marketer...</p>
+											2020 forced many small businesses to become focused in ways they didn’t imagine last winter. I’m not gonna enter the apparent details that we’ve all lived through recently. You’re alright conscious of them a day . At DAX , we’ve refined our approach during this point ...
+										</p>
 									</a>
 									<a href="Three-Essential-Digital-Marketing-Channels-In-2020.html" class="skew-btn js-pointer-large js-animsition-link">
 										<span class="skew-btn__box">
