--- a/web-development.html
+++ b/web-development.html
@@ -20,7 +20,8 @@
 	<link rel="apple-touch-icon" sizes="72x72" href="assets/images/apple-touch-icon-72x72-white.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="assets/images/apple-touch-icon-114x114-white.png">
 
-		<title>DAX - Web Development </title>
+		<title>Web Development - DAX | Academy </title>
+
 
 		<!-- fonts -->
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap" rel="stylesheet">
@@ -292,23 +293,39 @@
 
 		<!-- main start -->
 		<main class="js-animsition-overlay" data-animsition-overlay="true">
+
+			<!-- pos-rel start -->
+			<section id="up" class="pos-rel js-parallax-bg" style="background-image:url(assets/images/backgrounds/person-holding-white-scroll-2292837.jpg)">
+				<!-- bg-overlay -->
+				<div class="bg-overlay-black"></div>
+				<!-- pos-rel start -->
+				<div class="pos-rel flex-min-height-10vh">
+					<div class="padding-top-bottom-120 width-100perc">
+						<!-- title start -->
+						<h2 class="headline-xxxxl text-center hidden-box after-preloader-anim">
+							<!-- <span class="anim-slide">Blog</span> -->
+						</h2><!-- title end -->
+					</div>
+				</div><!-- pos-rel end -->
+			</section><!-- pos-rel end -->
+
 			<!-- page head start -->
 			<section id="up" class=" pos-rel anim-lines section-bg-dark-1">
 				<!-- lines-container start -->
-				<div class="lines-container pos-rel no-lines flex-min-height-30vh">
+				<div class="lines-container pos-rel no-lines flex-min-height-50vh">
 					<div class="container padding-top-bottom-120 after-preloader-anim">
 						<h2 class="headline-s hidden-box">
 							<span class="anim-slide"><span class="text-color-red">Web Development</span></span>
 						</h2>
-						<h3 class="subhead-s margin-top-20 anim-text-reveal tr-delay-03">
+						<!-- <h3 class="subhead-s margin-top-20 anim-text-reveal tr-delay-03">
 							Web development is the building and maintenance of websites; it's the work that happens behind the scenes to make a website look great, work fast and perform well with a seamless user experience. Web developers, or 'devs', do this by using a variety of coding languages.
-						</h3>
+						</h3> -->
 					</div>
 				</div><!-- lines-container end -->
 			</section><!-- page head end -->
 
 			<!-- about start -->
-			<section class=" pos-rel section-bg-dark-2 ">
+			<section class=" pos-rel section-bg-dark-1 ">
 				<!-- lines-container start -->
 				<div class="lines-container pos-rel no-lines flex-min-height-100vh">
 					<!-- flex-container start -->
@@ -319,9 +336,11 @@
 							<div class="padding-top-90">
 								<div class="js-scrollanim">
 									<h2 class="headline-s hidden-box">
-										<span class="anim-slide">Who We Are</span>
+										<span class="anim-slide">Why Web Development..?</span>
 									</h2>
-									<p class="body-text-s margin-top-20 anim-text-reveal tr-delay-02">Mlkshk YOLO wolf, leggings vinyl crucifix stumptown tousled. Pabst venmo gentrify deep v microdosing migas occupy master cleanse intelligentsia sartorial chia activated charcoal. Iceland small batch live-edge raclette roof party dreamcatcher austin pickled. Chillwave cronut messenger bag truffaut. Iceland post-ironic health goth snackwave, mixtape synth four dollar toast sartorial. Health goth la croix vexillologist, before they sold out shabby chic.</p>
+									<p class="body-text-s margin-top-20 anim-text-reveal tr-delay-02">
+										Web development is the building and maintenance of websites; it's the work that happens behind the scenes to make a website look great, work fast and perform well with a seamless user experience. Web developers, or 'devs', do this by using a variety of coding languages.
+									</p>
 								</div>
 							</div><!-- wo we are end -->
 
@@ -450,7 +469,7 @@
 			</section><!-- about end -->
 
 			<!-- partners start -->
-			<section class=" pos-rel section-bg-dark-2">
+			<section class=" pos-rel section-bg-dark-1">
 				<!-- lines-container start -->
 				<div class="lines-container pos-rel no-lines flex-min-height-100vh">
 					<!-- container start -->
